--- a/styleIndex.css
+++ b/styleIndex.css
@@ -4,3 +4,38 @@
     box-sizing: border-box;
 }
 
+.sessao-banner{
+    background-image: url(./assets/img-fundo.jpg);
+    background-repeat: no-repeat;
+    background-position: center;
+
+    height:115vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.sessao-banner  div{
+    color: white;
+    background-color: rgba(15,165,140,0.8);
+
+    border: 1px solid;
+    border-radius: 5px;
+
+    width: 35vw;
+
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.sessao-banner div > h1{
+    font-size: 3rem;
+    padding: 3rem 0;
+}
+
+.sessao-banner div > p{
+    font-size: 1.5rem;
+    font-weight: 100;
+    padding-bottom: 2rem;
+}
