--- a/styleIndex.css
+++ b/styleIndex.css
@@ -4,6 +4,8 @@
     box-sizing: border-box;
 }
 
+/* estilização da sessão banner */
+
 .sessao-banner{
     background-image: url(./assets/img-fundo.jpg);
     background-repeat: no-repeat;
@@ -38,4 +40,48 @@
     font-size: 1.5rem;
     font-weight: 100;
     padding-bottom: 2rem;
+}
+
+/* estilização da sessão de boas vindas */
+.sessao-boas_vindas{
+    display: flex;
+    flex-direction: column;
+}
+
+.sessao-boas_vindas > h3{
+    font-size: 2rem;
+    margin: 5rem 0 2rem 0;
+}
+
+.sessao-boas_vindas ul > li{
+    text-align: center;
+    line-height: 2.5rem;
+}
+
+.info-quartos{
+    display: flex;
+    justify-content: space-evenly;
+    flex-wrap: wrap;
+
+    margin: 3rem 0 4rem 0;
+}
+
+.info-quartos img{
+    width: 25vw;
+    height: 35vh;
+}
+
+.info-quartos article{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.info-quartos article > p{
+    text-transform: uppercase;
+    padding: 1.5rem 0;
+}
+
+.info-quartos article > hr{
+    width: 25vw;
 }
