--- a/styleGlobal.css
+++ b/styleGlobal.css
@@ -8,8 +8,6 @@ h3{
     text-align: center;
 }
 
-
-
 header{
     display: flex;
     align-items: center;
@@ -37,5 +35,38 @@ nav ul a{
     text-transform: uppercase;
 }
 
+footer{
+    background-color: rgb(73,153,124);
+    color: white;
+
+    padding: 0 5rem;
+}
+
+
+footer img{
+    width: 2.5vw;
+}
+
+footer div{
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    
+    padding: 0.5rem 0;
+}
+
+footer div > p{
+    padding-left: 0.4rem;
+}
+
+footer ul{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+footer ul > li{
+    margin: 0.5rem 0;
+}
 
 
